<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialog"
            type="com.ymx.driver.ui.launch.dialog.PermissionDeniedDialog" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            app:bl_corners_radius="8dp"
            app:bl_solid_color="@color/rx_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:text="@string/permission_denied_title"
                android:textColor="@color/rx_000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:text="@string/permission_denied_body"
                android:textColor="@color/rx_000000"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="18dp"
                android:background="@color/rx_8a8a8a" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/rx_000000"
                    android:textSize="16sp"
                    app:onClickCommand="@{dialog.negative}" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/rx_8a8a8a" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/rx_2196f3"
                    android:textSize="16sp"
                    app:onClickCommand="@{dialog.positive}" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>