<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ymx.driver.viewmodel.main.PayViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rx_transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:bl_corners_bottomLeftRadius="0dp"
            app:bl_corners_bottomRightRadius="0dp"
            app:bl_corners_topLeftRadius="4dp"
            app:bl_corners_topRightRadius="4dp"
            app:bl_solid_color="@color/rx_ffffff">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/pay"
                    android:textColor="@color/rx_333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="30dp"
                    android:text="@{viewModel.totalPrice + @string/money_zh}"
                    android:textColor="@color/rx_333333"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@color/rx_e1e1e1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/hummer_pay_sp_pay_icon_wechat" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/pay_wechat"
                    android:textColor="@color/rx_555555"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    app:onClickCommand="@{viewModel.payTypeWechat}"
                    app:url="@{viewModel.payType == 0 ? @drawable/dgp_cause_checkbox_checked : @drawable/dgp_cause_checkbox_unchecked}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/hummer_pay_sp_pay_icon_alipay" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/pay_ali"
                    android:textColor="@color/rx_555555"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    app:onClickCommand="@{viewModel.payTypeAli}"
                    app:url="@{viewModel.payType == 1 ? @drawable/dgp_cause_checkbox_checked : @drawable/dgp_cause_checkbox_unchecked}" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/pay_confirm"
                android:textColor="@color/rx_ffffff"
                android:textSize="16sp"
                app:bl_corners_radius="2dp"
                app:bl_pressed_solid_color="@color/rx_eb834a"
                app:bl_unPressed_solid_color="@color/rx_eb834a"
                app:onClickCommand="@{viewModel.payConfirm}" />
        </LinearLayout>
    </RelativeLayout>
</layout>