<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.ymx.driver.util.SystemUtils" />

        <variable
            name="viewModel"
            type="com.ymx.driver.viewmodel.mine.AboutViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white">


            <ImageView
                style="@style/Back_Btn_Style_1"
                app:onClickCommand="@{viewModel.back}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about"
                android:textColor="@color/rx_333333"
                android:textSize="18sp"
                />

        </FrameLayout>



        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="40dp"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:bl_pressed_solid_color="@color/rx_f2f2f2"
                    app:bl_unPressed_solid_color="@color/rx_ffffff"
                    app:onClickCommand="@{viewModel.userTerms}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="14dp"
                        android:text="@string/user_terms"
                        android:textColor="@color/rx_555555"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="6dp"
                        android:layout_height="13dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/icon_driver_right_arrow" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:bl_pressed_solid_color="@color/rx_f2f2f2"
                    app:bl_unPressed_solid_color="@color/rx_ffffff"
                    app:onClickCommand="@{viewModel.version}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="14dp"
                        android:text="@string/cur_version"
                        android:textColor="@color/rx_555555"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="10dp"
                        android:text="@{@string/version_prefix + SystemUtils.version}"
                        android:textColor="@color/rx_808080"
                        android:textSize="14sp"/>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>